kubernetes/manifests/postgresql-backup/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: default
    namespace: postgresql-backup
spec:
    endpointSelector: {}
    ingress:
      - {}
    egress:
      - toEndpoints:
          - matchLabels:
                io.kubernetes.pod.namespace: kube-system
                k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
            rules:
                dns:
                  - matchPattern: "*"
      - toEndpoints:
          - matchLabels:
                io.kubernetes.pod.namespace: pgsql
        toPorts:
          - ports:
              - port: "5432"
      - toFQDNs:
          - matchPattern: "*.nullservers.com"
